# DS-Emulator

./: CMakeLists.txt
src/: README.md  main.cpp  nds.cpp  nds.h
src/arm/: arm.cpp  arm.h
src/frontend/: sdl_frontend.cpp  sdl_frontend.h
src/gpu/: gpu2d.cpp  gpu2d.h
src/io/: interrupts.h  ioregs.h  timers.h
src/memory/: bus.cpp  bus.h  rom.h
